<resources>
    <string name="app_name">Sensor Demo 2</string>

    <string name="action_settings">Settings</string>
    <string name="btn_viewMap">View on Map</string>
    <string name="btn_fullScreen">Full Screen</string>
    <string name="roll">Roll:</string>
    <string name="pitch">Pitch:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="bearing">Bearing:</string>
    <string name="degree">Deg.</string>
    <string name="sensor_value_placeholder">0.00</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
