<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ToggleButton
        android:id = "@+id/toggled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="*" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roll"/>

            <TextView
                android:id="@+id/rollData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensor_value_placeholder"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pitch"/>

            <TextView
                android:id="@+id/pitchData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensor_value_placeholder"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude"/>

            <TextView
                android:id="@+id/latitudeData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensor_value_placeholder"/>

            <TextView
                android:id="@+id/latitudeDirection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude"/>

            <TextView
                android:id="@+id/longitudeData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensor_value_placeholder"/>

            <TextView
                android:id="@+id/longitudeDirection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bearing"/>

            <TextView
                android:id="@+id/bearingData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensor_value_placeholder" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_viewMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/btn_viewMap"
        android:onClick="launchView"/>

    <Button
        android:id="@+id/btn_fullScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/btn_fullScreen"
        android:onClick="launchView"/>

</LinearLayout>